kubernetes/ecommerce-gateway.yml
# Istio Ingress Gateway (Gateway dan Virtual Service). 
# -------------------------------------------------------------------------------------------

# GATEWAY
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: order-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# VIRTUAL SERVICE
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
spec:
  hosts:
  - "*"
  gateways:
  - order-service-gateway
  http:
  - match:
    - uri:
        # Nilai http.match.uri.exact : /order 
        exact: /order
    route:
    - destination:
        # Nilai http.match.route.destination.host : order-service (object dari order-service.yml)
        host: order-service
        port:
          number: 3000
